--- a/views/user_input.erb
+++ b/views/user_input.erb
@@ -9,7 +9,7 @@
     <p>Enter your phrase:</p>
     <p>user_phrase</p>
     <form method="post" action="/piglatinize">
-  <p>Word: <input type="text" name="name"></p>
+  <p>Word: <input type="text" name="user_phrase"></p>
   <input type="submit" id="Submit">
   </form>
   </body>
